# Mini-Business

./: LICENSE  README.md
mini-business/: README.md  pyproject.toml
mini-business/src/: main.py
mini-business/src/views/: clients_view.py  home_view.py
mini_business/: README.md  pubspec.yaml
mini_business/android/app/: build.gradle.kts
mini_business/android/app/src/main/: AndroidManifest.xml
mini_business/android/app/src/main/kotlin/com/example/mini_business/: MainActivity.kt
mini_business/ios/Runner/: Info.plist
mini_business/ios/Runner.xcodeproj/: project.pbxproj
mini_business/lib/: local_server.dart  main.dart
mini_business/lib/models/: client.dart  stock.dart  supplier.dart
mini_business/lib/screens/: add_client.dart  add_stock.dart  add_supplier.dart  client_screen.dart  home_screen.dart  stock_screen.dart  supplier_screen.dart
mini_business/lib/services/: db_service.dart  pdf_service
mini_business/lib/settings/: settings_service.dart
mini_business/linux/: CMakeLists.txt
mini_business/linux/runner/: my_application.cc
mini_business/macos/Runner.xcodeproj/: project.pbxproj
mini_business/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mini_business/macos/Runner/Configs/: AppInfo.xcconfig
mini_business/test/: widget_test.dart
mini_business/web/: index.html  manifest.json
mini_business/windows/: CMakeLists.txt
mini_business/windows/runner/: Runner.rc  main.cpp
