[project]
name = "mini-business"
version = "0.0.2"
description = "An app that takes in the simplest parts of running a business and makes it easy-to-use, run locally and have full functionality to competitors"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Reece Bayley", email = "reecebayley13@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "mini-business"

# company name to display in about app dialogs
company = "RLB"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by RLB"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}